Fix tiny layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,7 +48,7 @@ main {
     overflow-wrap: break-word;
 }
 
-main *:not(.comparison) {
+main > *:not(.comparison) {
     max-width: 50rem;
     margin-left: auto;
     margin-right: auto;
